movef fix from overflow issue into template

--- a/code/style/header-footer.css
+++ b/code/style/header-footer.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap');
 
+html {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
